Added time limit to find failing test

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -25,4 +25,4 @@ jobs:
           pip install -r requirements.pip
 
       - name: Run tests with pytest
-        run: pytest
+        run: pytest -v --durations=10
