--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.pip
+          pip install pytest pytest-timeout
 
       - name: Run tests with pytest
-        run: pytest -v --durations=10
+        run: pytest -v --durations=10 --timeout=30
